renamed to acquisition

--- a/acquisition.html
+++ b/acquisition.html
@@ -89,7 +89,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://www.cocredit.com.au/lead-magnet.html"
+      content="https://www.cocredit.com.au/acquisition.html"
     />
     <meta property="og:title" content="Co.Credit - Buying a Trail Book" />
     <meta
@@ -495,6 +495,3 @@
     </script>
   </body>
 </html>
-
-
-
