--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <!-- End section -->
 
     <div class="section lead-magnet-highlight">
-      <a class="lead-magnet-link" href="lead-magnet.html">
+      <a class="lead-magnet-link" href="acquisition.html">
         <img
           src="assets/images/lead-magnet.png"
           alt="Co.Credit trail book guide cover"
