Made footer number clickable

--- a/start.html
+++ b/start.html
@@ -430,7 +430,7 @@
                   <img src="assets/images/logo/logo-dark.png" alt="" />
                 </a>
                 <p>The secret weapon for every Australian Broker.</p>
-                <p>1300 112 999</p>
+                <p><a href="tel:1300112999">1300 112 999</a></p>
               </div>
             </div>
             <div class="col-xl-3 col-md-4">
