--- a/contact.html
+++ b/contact.html
@@ -270,7 +270,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-6">
-            <a href="mailto:name@email.com">
+            <a href="mailto:hello@cocredit.com.au">
               <div class="zubuz-iconbox-wrap-left text-center-lg rt-mb-24">
                 <div class="zubuz-iconbox-icon">
                   <img src="assets/images/icon/email3.svg" alt="" />
