--- a/thank-you.html
+++ b/thank-you.html
@@ -1,200 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "1500631950881174");
-      fbq("track", "PageView");
-    </script>
-    <noscript
-      ><img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=1500631950881174&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Meta Pixel Code -->
-    <!-- START GOOGLE TAGS -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-NWB3H5MQ");
-    </script>
-    <!-- END GOOGLE TAGS -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Co.Credit - Thank you</title>
-    <meta
-      name="description"
-      content="Unique, bespoke loans for trail book purchases analyzed on cash flow."
-    />
 
-    <link
-      rel="shortcut icon"
-      href="assets/images/favicon.ico"
-      type="image/x-icon"
-    />
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
-    <!--- End favicon-->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Meta Pixel Code -->
+  <script>
+    !(function (f, b, e, v, n, t, s) {
+      if (f.fbq) return;
+      n = f.fbq = function () {
+        n.callMethod
+          ? n.callMethod.apply(n, arguments)
+          : n.queue.push(arguments);
+      };
+      if (!f._fbq) f._fbq = n;
+      n.push = n;
+      n.loaded = !0;
+      n.version = "2.0";
+      n.queue = [];
+      t = b.createElement(e);
+      t.async = !0;
+      t.src = v;
+      s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s);
+    })(
+      window,
+      document,
+      "script",
+      "https://connect.facebook.net/en_US/fbevents.js"
+    );
+    fbq("init", "1500631950881174");
+    fbq("track", "PageView");
+  </script>
+  <noscript><img height="1" width="1" style="display: none"
+      src="https://www.facebook.com/tr?id=1500631950881174&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
+  <!-- START GOOGLE TAGS -->
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != "dataLayer" ? "&l=" + l : "";
+      j.async = true;
+      j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, "script", "dataLayer", "GTM-NWB3H5MQ");
+  </script>
+  <!-- END GOOGLE TAGS -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Co.Credit - Thank you</title>
+  <meta name="description" content="Unique, bespoke loans for trail book purchases analyzed on cash flow." />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Raleway:wght@600;700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- End google font  -->
+  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
+  <!--- End favicon-->
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/magnific-popup.css" />
-    <link rel="stylesheet" href="assets/css/slick.css" />
-    <link rel="stylesheet" href="assets/css/animate.css" />
-    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Raleway:wght@600;700&display=swap"
+    rel="stylesheet" />
+  <!-- End google font  -->
 
-    <!-- Code Editor  -->
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/magnific-popup.css" />
+  <link rel="stylesheet" href="assets/css/slick.css" />
+  <link rel="stylesheet" href="assets/css/animate.css" />
+  <link rel="stylesheet" href="assets/css/fontawesome.css" />
 
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/app.css" />
+  <!-- Code Editor  -->
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://www.cocredit.com.au/thank-you.html"
-    />
-    <meta property="og:title" content="Co.Credit - Thank you" />
-    <meta
-      property="og:description"
-      content="Unique, bespoke loans for trail book purchases analyzed on cash flow."
-    />
-    <meta
-      property="og:image"
-      content="https://www.cocredit.com.au/assets/images/logo/logo.png"
-    />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="600" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/app.css" />
 
-    <!-- Twitter Card tags (optional but recommended) -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Co.Credit - Thank you" />
-    <meta
-      name="twitter:description"
-      content="Unique, bespoke loans for trail book purchases analyzed on cash flow."
-    />
-    <meta
-      name="twitter:image"
-      content="https://www.cocredit.com.au/assets/images/logo/logo.png"
-    />
-  </head>
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.cocredit.com.au/thank-you.html" />
+  <meta property="og:title" content="Co.Credit - Thank you" />
+  <meta property="og:description" content="Unique, bespoke loans for trail book purchases analyzed on cash flow." />
+  <meta property="og:image" content="https://www.cocredit.com.au/assets/images/logo/logo.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="600" />
 
-  <body class="light">
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-NWB3H5MQ"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <div class="zubuz-preloader-wrap">
-      <div class="zubuz-preloader">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
+  <!-- Twitter Card tags (optional but recommended) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Co.Credit - Thank you" />
+  <meta name="twitter:description" content="Unique, bespoke loans for trail book purchases analyzed on cash flow." />
+  <meta name="twitter:image" content="https://www.cocredit.com.au/assets/images/logo/logo.png" />
+</head>
+
+<body class="light">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NWB3H5MQ" height="0" width="0"
+      style="display: none; visibility: hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <div class="zubuz-preloader-wrap">
+    <div class="zubuz-preloader">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
+  </div>
 
-    <header
-      class="site-header site-header--menu-center zubuz-header-section dark-bg white-menu"
-      id="sticky-menu"
-      style="background-color: black"
-    >
-      <div class="container">
-        <nav class="navbar site-navbar">
-          <!-- Brand Logo-->
-          <div class="brand-logo">
-            <a href="index.html">
-              <img
-                src="assets/images/logo/logo-white.png"
-                alt=""
-                class="light-version-logo"
-              />
-            </a>
-          </div>
-          <div class="menu-block-wrapper">
-            <div class="menu-overlay"></div>
-            <nav class="menu-block" id="append-menu-header"></nav>
-          </div>
+  <header class="site-header site-header--menu-center zubuz-header-section dark-bg white-menu" id="sticky-menu"
+    style="background-color: black">
+    <div class="container">
+      <nav class="navbar site-navbar">
+        <!-- Brand Logo-->
+        <div class="brand-logo">
+          <a href="index.html">
+            <img src="assets/images/logo/logo-white.png" alt="" class="light-version-logo" />
+          </a>
+        </div>
+        <div class="menu-block-wrapper">
+          <div class="menu-overlay"></div>
+          <nav class="menu-block" id="append-menu-header"></nav>
+        </div>
 
-          <div class="header-btn header-btn-l1 ms-auto d-xs-inline-flex">
-            <div class="zubuz-header-btn-wrap btn-login">
-              <a class="zubuz-login-btn" href="sign-up.html">Login</a>
-            </div>
-            <a
-              class="zubuz-default-btn zubuz-header-btn"
-              href="https://portal.cocredit.com.au/auth/signup"
-            >
-              <span>Get Started</span>
-            </a>
+        <div class="header-btn header-btn-l1 ms-auto d-xs-inline-flex">
+          <div class="zubuz-header-btn-wrap btn-login">
+            <a class="zubuz-login-btn" href="sign-up.html">Login</a>
           </div>
-        </nav>
-      </div>
-    </header>
-    <!--End landex-header-section -->
-
-    <div class="zubuz-breadcrumb">
-      <div class="container">
-        <h1 class="post__title">We're on it</h1>
-      </div>
+          <a class="zubuz-default-btn zubuz-header-btn" href="https://portal.cocredit.com.au/auth/signup">
+            <span>Get Started</span>
+          </a>
+        </div>
+      </nav>
     </div>
-    <!-- End breadcrumb -->
+  </header>
+  <!--End landex-header-section -->
 
-    <div class="section zubuz-section-padding2">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="zubuz-default-content m-right">
-              <h2>Thanks for getting in touch.</h2>
-              <p>We'll be in touch in the next 24 hours.</p>
-              <div class="zubuz-extara-mt">
-                <div class="zubuz-iconbox-wrap-left d-block">
-                  <div class="zubuz-iconbox-data data-small">
-                    <span>Office Location:</span>
-                    <p>10-20 Gwynne St, Cremorne.</p>
-                  </div>
+  <div class="zubuz-breadcrumb">
+    <div class="container">
+      <h1 class="post__title">We're on it</h1>
+    </div>
+  </div>
+  <!-- End breadcrumb -->
+
+  <div class="section zubuz-section-padding2">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="zubuz-default-content m-right">
+            <h2>Thanks for getting in touch.</h2>
+            <p>We'll be in touch in the next 24 hours.</p>
+            <div class="zubuz-extara-mt">
+              <div class="zubuz-iconbox-wrap-left d-block">
+                <div class="zubuz-iconbox-data data-small">
+                  <span>Office Location:</span>
+                  <p>55 Collins St, Melbourne.</p>
                 </div>
               </div>
             </div>
@@ -202,105 +157,107 @@
         </div>
       </div>
     </div>
-    <!-- end section -->
+  </div>
+  <!-- end section -->
 
-    <div class="section dark-bg zubuz-section-padding6">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <a href="mailto:name@email.com">
-              <div class="zubuz-iconbox-wrap-left text-center-lg rt-mb-24">
-                <div class="zubuz-iconbox-icon">
-                  <img src="assets/images/icon/email3.svg" alt="" />
-                </div>
-                <div class="zubuz-iconbox-data light">
-                  <h3>Email us</h3>
-                  <p>hello@cocredit.com.au<br /></p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <a href="tel:1300112999">
-              <div class="zubuz-iconbox-wrap-left text-center-lg rt-mb-24">
-                <div class="zubuz-iconbox-icon">
-                  <img src="assets/images/icon/call2.svg" alt="" />
-                </div>
-                <div class="zubuz-iconbox-data light">
-                  <h3>Call us</h3>
-                  <p>1300 112 999<br /></p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6">
+  <div class="section dark-bg zubuz-section-padding6">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-6">
+          <a href="mailto:name@email.com">
             <div class="zubuz-iconbox-wrap-left text-center-lg rt-mb-24">
               <div class="zubuz-iconbox-icon">
-                <img src="assets/images/icon/map2.svg" alt="" />
+                <img src="assets/images/icon/email3.svg" alt="" />
               </div>
               <div class="zubuz-iconbox-data light">
-                <h3>Our office address</h3>
-                <p>
-                  10-20 Gwynne St,<br />
-                  Cremorne VIC.
-                </p>
+                <h3>Email us</h3>
+                <p>hello@cocredit.com.au<br /></p>
               </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <a href="tel:1300112999">
+            <div class="zubuz-iconbox-wrap-left text-center-lg rt-mb-24">
+              <div class="zubuz-iconbox-icon">
+                <img src="assets/images/icon/call2.svg" alt="" />
+              </div>
+              <div class="zubuz-iconbox-data light">
+                <h3>Call us</h3>
+                <p>1300 112 999<br /></p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="zubuz-iconbox-wrap-left text-center-lg rt-mb-24">
+            <div class="zubuz-iconbox-icon">
+              <img src="assets/images/icon/map2.svg" alt="" />
+            </div>
+            <div class="zubuz-iconbox-data light">
+              <h3>Our office address</h3>
+              <p>
+                55 Collins St,<br />
+                Melbourne VIC.
+              </p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- End section -->
+  </div>
+  <!-- End section -->
 
-    <footer class="zubuz-footer-section main-footer dark-bg">
-      <div class="container">
-        <div class="zubuz-footer-top">
-          <div class="row">
-            <div class="col-xl-4 col-lg-12">
-              <div class="zubuz-footer-textarea light">
-                <a href="">
-                  <img src="assets/images/logo/logo-white.png" alt="" />
-                </a>
-                <p>The secret weapon for every Australian Broker.</p>
-                <p>1300 112 999</p>
-              </div>
-            </div>
-            <div class="col-xl-3 col-md-4">
-              <div class="zubuz-footer-menu extar-margin light">
-                <div class="zubuz-footer-title light">
-                  <p>Resources</p>
-                </div>
-                <ul class="menu-list">
-                  <li><a href="privacy.html">Privacy policy</a></li>
-                  <li><a href="terms.html">Terms & Conditions</a></li>
-                </ul>
-              </div>
+  <footer class="zubuz-footer-section main-footer dark-bg">
+    <div class="container">
+      <div class="zubuz-footer-top">
+        <div class="row">
+          <div class="col-xl-4 col-lg-12">
+            <div class="zubuz-footer-textarea light">
+              <a href="">
+                <img src="assets/images/logo/logo-white.png" alt="" />
+              </a>
+              <p>The secret weapon for every Australian Broker.</p>
+              <p>1300 112 999</p>
             </div>
           </div>
-        </div>
-        <div class="zubuz-footer-bottom">
-          <div class="zubuz-copywright light">
-            <p>
-              Approved applicants only. Conditions, fees and charges may apply.
-              Copyright &copy; 2025 | Co.Credit Finance pty. ltd. | ABN 72 676
-              367 196
-            </p>
+          <div class="col-xl-3 col-md-4">
+            <div class="zubuz-footer-menu extar-margin light">
+              <div class="zubuz-footer-title light">
+                <p>Resources</p>
+              </div>
+              <ul class="menu-list">
+                <li><a href="privacy.html">Privacy policy</a></li>
+                <li><a href="terms.html">Terms & Conditions</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </footer>
+      <div class="zubuz-footer-bottom">
+        <div class="zubuz-copywright light">
+          <p>
+            Approved applicants only. Conditions, fees and charges may apply.
+            Copyright &copy; 2025 | Co.Credit Finance pty. ltd. | ABN 72 676
+            367 196
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-    <!-- scripts -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/menu/menu.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/slick.js"></script>
-    <script src="assets/js/countdown.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/faq.js"></script>
+  <!-- scripts -->
+  <script src="assets/js/jquery-3.6.0.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/menu/menu.js"></script>
+  <script src="assets/js/isotope.pkgd.min.js"></script>
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="assets/js/slick.js"></script>
+  <script src="assets/js/countdown.js"></script>
+  <script src="assets/js/wow.min.js"></script>
+  <script src="assets/js/faq.js"></script>
 
-    <script src="assets/js/app.js"></script>
-  </body>
+  <script src="assets/js/app.js"></script>
+</body>
+
 </html>
