--- a/packs/model.html
+++ b/packs/model.html
@@ -131,7 +131,7 @@
     <div class="section zubuz-section-padding2">
         <div class="container">
             <div class="zubuz-hero-content center position-relative">
-                <h1>Downloading your free Ebook</h1>
+                <h1>Downloading your free Model</h1>
             </div>
         </div>
     </div>
