--- a/model.html
+++ b/model.html
@@ -278,6 +278,7 @@
                 <p>Resources</p>
               </div>
               <ul class="menu-list">
+                <li><a href="calculator.html">Borrowing Calculator</a></li>
                 <li><a href="privacy.html">Privacy policy</a></li>
                 <li><a href="terms.html">Terms & Conditions</a></li>
               </ul>
